Fixed axelor logo issue

--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -386,6 +386,7 @@ header .navbar-inverse .dropdown-submenu:focus > a {
 
 .navigation-tabs ul.nav-tabs {
 	margin-bottom: 0px;
+	height: 35px;
 }
 
 .navigation-tabs {
