--- a/axelor-web/src/main/webapp/partials/nav-tabs.html
+++ b/axelor-web/src/main/webapp/partials/nav-tabs.html
@@ -19,4 +19,7 @@
     		ng-include src="'partials/views/'+ view.type +'.html'"></div>
     </div>
   </div>
+  <a href="http://axelor.com" tabindex="-1" target="_blank" style="position: absolute; position: absolute; right: 0px; top: 0px;">
+    <img src="img/axelor.png" width="100" height="32">
+  </a>
 </div>
