--- a/axelor-web/src/main/webapp/partials/views/calendar.html
+++ b/axelor-web/src/main/webapp/partials/views/calendar.html
@@ -7,6 +7,9 @@
   	      <button class="btn" ng-click="onMode('week')" ng-class="{ active: isMode('week') }"><span x-translate>Week</span></button>
   	      <button class="btn" ng-click="onMode('day')" ng-class="{ active: isMode('day') }"><span x-translate>Day</span></button>
   	    </div>
+        <div class="btn-group">
+          <button class="btn" ng-click="onRefresh()"><span x-translate>Refresh</span></button>
+        </div>
   	    <div ui-view-switcher class="pull-right"></div>
   	    <div class="record-pager pull-right">
   	      <span ng-bind-html-unsafe="pagerText()"></span>
