--- a/axelor-meta/src/main/resources/views/Views.xml
+++ b/axelor-meta/src/main/resources/views/Views.xml
@@ -66,7 +66,7 @@
     <option value="button">Button</option>
     <option value="menu">Menu</option>
     <option value="actionMenu">Action Menu</option>
-    <option value="view">Vue</option>
+    <option value="view">View</option>
     <option value="tree">Tree</option>
     <option value="chart">Chart</option>
     <option value="portlet">Portlet</option>
