--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -885,3 +885,77 @@ table.field-details .help-text hr {
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
 }
+
+/* hilite */
+[class *= hilite-].strong {
+	font-weight: bold;
+}
+
+.hilite-primary-text {
+	color: #428bca;
+}
+
+.hilite-primary,
+.hilite-primary .slick-cell {
+	color: #fff;
+	background-color: #428bca;
+}
+
+.hilite-warning-text {
+	color: #f0ad4e;
+}
+
+.hilite-warning,
+.hilite-warning .slick-cell {
+	color: #fff;
+	background-color: #f0ad4e;
+}
+
+.hilite-success-text {
+	color: #5cb85c;
+}
+
+.hilite-success,
+.hilite-success .slick-cell {
+	color: #fff;
+	background-color: #5cb85c;
+}
+
+.hilite-danger-text {
+	color: #d9534f;
+}
+
+.hilite-danger,
+.hilite-danger .slick-cell {
+	color: #fff;
+	background-color: #d9534f;
+}
+
+.hilite-error-text {
+	color: #b94a48;
+}
+
+.hilite-error,
+.hilite-error .slick-cell {
+	color: #fff;
+	background-color: #b94a48;
+}
+
+.hilite-info-text {
+	color: #5bc0de;
+}
+
+.hilite-info,
+.hilite-info .slick-cell {
+	color: #fff;
+	background-color: #5bc0de;
+}
+
+.hilite-default,
+.hilite-default .slick-cell {
+
+}
+
+.hilite-default-text {
+
+}
