--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -887,75 +887,94 @@ table.field-details .help-text hr {
 }
 
 /* hilite */
-[class *= hilite-].strong {
-	font-weight: bold;
+[class *= hilite-].strong,
+[class *= hilite-].strong input:first-of-type {
+	font-weight: bold !important;
 }
 
-.hilite-primary-text {
-	color: #428bca;
+.hilite-primary-text,
+.hilite-primary-text input:first-of-type {
+	color: #428bca !important;
 }
 
 .hilite-primary,
+.hilite-primary input:first-of-type,
 .hilite-primary .slick-cell {
-	color: #fff;
-	background-color: #428bca;
+	color: #fff !important;
+	background-color: #428bca !important;
 }
 
-.hilite-warning-text {
-	color: #f0ad4e;
+.hilite-warning-text,
+.hilite-warning-text input:first-of-type {
+	color: #f0ad4e !important;
 }
 
 .hilite-warning,
+.hilite-warning input:first-of-type,
 .hilite-warning .slick-cell {
-	color: #fff;
-	background-color: #f0ad4e;
+	color: #fff !important;
+	background-color: #f0ad4e !important;
 }
 
-.hilite-success-text {
-	color: #5cb85c;
+.hilite-success-text,
+.hilite-success-text input:first-of-type {
+	color: #5cb85c !important;
 }
 
 .hilite-success,
+.hilite-success input:first-of-type,
 .hilite-success .slick-cell {
-	color: #fff;
-	background-color: #5cb85c;
+	color: #fff !important;
+	background-color: #5cb85c !important;
 }
 
-.hilite-danger-text {
-	color: #d9534f;
+.hilite-danger-text,
+.hilite-danger-text input:first-of-type {
+	color: #d9534f !important;
 }
 
 .hilite-danger,
+.hilite-danger input:first-of-type,
 .hilite-danger .slick-cell {
-	color: #fff;
-	background-color: #d9534f;
+	color: #fff !important;
+	background-color: #d9534f !important;
 }
 
-.hilite-error-text {
-	color: #b94a48;
+.hilite-error-text,
+.hilite-error-text input:first-of-type {
+	color: #b94a48 !important;
 }
 
 .hilite-error,
+.hilite-error input:first-of-type,
 .hilite-error .slick-cell {
-	color: #fff;
-	background-color: #b94a48;
+	color: #fff !important;
+	background-color: #b94a48 !important;
 }
 
-.hilite-info-text {
-	color: #5bc0de;
+.hilite-info-text,
+.hilite-info-text input:first-of-type {
+	color: #5bc0de !important;
 }
 
 .hilite-info,
+.hilite-info input:first-of-type,
 .hilite-info .slick-cell {
-	color: #fff;
-	background-color: #5bc0de;
+	color: #fff !important;
+	background-color: #5bc0de !important;
+}
+
+.hilite-default-text,
+.hilite-default-text input:first-of-type {
+
 }
 
 .hilite-default,
+.hilite-default input:first-of-type,
 .hilite-default .slick-cell {
 
 }
 
-.hilite-default-text {
-
+[class *= hilite-].form-item-container {
+	background-color: inherit !important;
 }
