--- a/axelor-web/src/main/webapp/partials/nav-tabs.html
+++ b/axelor-web/src/main/webapp/partials/nav-tabs.html
@@ -22,4 +22,11 @@
   <a href="http://axelor.com" tabindex="-1" target="_blank" style="position: absolute; position: absolute; right: 0px; top: 0px;">
     <img src="img/axelor.png" width="100" height="32">
   </a>
+  <div id="nav-tabs-menu" class="dropdown clearfix">
+    <ul class="dropdown-menu" style="display:block;position:static;margin-bottom:5px;">
+      <li><a href="" tabindex="-1" ng-click="closeTab(current)" x-translate>Close</a></li>
+      <li><a href="" tabindex="-1" ng-click="closeTabOthers(current)" x-translate>Close Others</a></li>
+      <li><a href="" tabindex="-1" ng-click="closeTabAll()" x-translate>Close All</a></li>
+    </ul>
+  </div>
 </div>
