--- a/axelor-web/src/main/webapp/partials/nav-tabs.html
+++ b/axelor-web/src/main/webapp/partials/nav-tabs.html
@@ -26,4 +26,5 @@
       <li><a href="" tabindex="-1" ng-click="closeTabAll()" x-translate>Close All</a></li>
     </ul>
   </div>
+  <div class="nav-tabs-popup" ng-repeat="tab in navPopups" ui-view-popup="tab"></div>
 </div>
