Hide view toolbar if specified with view param

--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -1,5 +1,5 @@
 <div class="form-view" ng-controller="FormViewCtrl">
-  <div class="navbar record-toolbar">
+  <div class="navbar record-toolbar" ng-show="canShowToolbar()">
     <div class="navbar-inner">
       <div class="container">
         <div class="btn-group">
