--- a/axelor-web/src/main/webapp/partials/nav-tabs.html
+++ b/axelor-web/src/main/webapp/partials/nav-tabs.html
@@ -16,7 +16,8 @@
   <div class="view-content">
     <div ng-show="tab.selected" ng-repeat="tab in navTabs" ui-view-pane="tab"></div>
   </div>
-  <a href="http://axelor.com" tabindex="-1" target="_blank" style="position: absolute; position: absolute; right: 0px; top: 0px;">
+  <a href="http://axelor.com" tabindex="-1" target="_blank" class="axelor-logo"
+    style="position: absolute; position: absolute; right: 0px; top: 0px;">
     <img src="img/axelor.png" width="100" height="32">
   </a>
   <div id="nav-tabs-menu" class="dropdown clearfix">
