fixed small input size issue

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -151,8 +151,13 @@ table.form-layout td.form-item.v-align-top {
 }
 
 .form-item-container input {
+	min-width: 170px;
 	height: 26px;
 	padding: 2px 6px;
+}
+
+.form-item-container[style *= width] input {
+	min-width: inherit;
 }
 
 .form-item-container input,
