--- a/axelor-web/src/main/webapp/css/view.calendar.css
+++ b/axelor-web/src/main/webapp/css/view.calendar.css
@@ -31,7 +31,7 @@
 .view-container .calendar-view > div:last-child {
 	position: absolute;
 	top: 48px;
-	bottom: 0; left: 0; right: 0;
+	bottom: 0; left: 4px; right: 0;
 }
 
 .calendar-main {
