--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -27,22 +27,18 @@
             <i class="icon icon-refresh"></i> <span ng-hide="tbTitleHide" x-translate>Refresh</span>
           </button>
         </div>
-        <div class="btn-group" ng-if="hasAuditLog()">
-          <button class="btn" ng-click="onShowLog($event)"><i class="icon icon-eye-open"></i></button>
+        <div class="btn-group" ui-btn-group-helper>
+          <button class="btn" ng-show="hasAuditLog()" ng-click="onShowLog($event)"><i class="icon icon-eye-open"></i></button>
+          <button class="btn" ng-show="canShowAttachments()" ng-click="onShowAttachments()"><i class="icon icon-pushpin"></i></button>
+          <button class="btn" ng-show="hasHelp()" ng-click="onShowHelp()"><i class="icon icon-info-sign"></i></button>
         </div>
-        <div class="btn-group" ng-if="canShowAttachments()">
-          <button class="btn" ng-click="onShowAttachments()"><i class="icon icon-pushpin"></i></button>
-        </div>
-        <div class="btn-group" ng-if="hasHelp()">
-        <button class="btn" ng-click="onShowHelp()"><i class="icon icon-info-sign"></i></button>
-        </div>
-        <div ui-menu-bar menus="menubar" handler="this"></div>
-        <div class="btn-group" ng-if="toolbar">
+        <div class="btn-group" ng-if="toolbar" ui-btn-group-helper>
           <button ng-repeat="btn in toolbar | filter:{custom: true}" ui-tool-button></button>
         </div>
-        <div class="btn-group" ng-if="toolbar" style="display: none;">
+        <div class="btn-group" ng-if="toolbar" ui-btn-group-helper style="display: none;">
           <button ng-repeat="btn in toolbar | filter:{custom: false}" ui-tool-button></button>
         </div>
+        <div ui-menu-bar menus="menubar" handler="this"></div>
         <div ui-view-switcher class="pull-right"></div>
         <div ui-record-pager class="pull-right"></div>
       </div>
