--- a/axelor-web/src/main/webapp/partials/views/grid.html
+++ b/axelor-web/src/main/webapp/partials/views/grid.html
@@ -17,11 +17,11 @@
           </button>
           <button class="btn" ui-grid-export="this" ng-if="hasButton('export')"></button>
         </div>
-        <div ui-filter-box x-handler="this"></div>
-        <div ui-menu-bar menus="menubar" handler="this"></div>
-        <div class="btn-group" ng-if="toolbar">
+        <div class="btn-group" ng-if="toolbar" ui-btn-group-helper>
           <button ng-repeat="btn in toolbar" class="btn" ui-tool-button="btn">{{btn.title}}</button>
         </div>
+        <div ui-filter-box x-handler="this"></div>
+        <div ui-menu-bar menus="menubar" handler="this"></div>
         <div ui-view-switcher class="pull-right"></div>
         <div ui-record-pager class="pull-right"></div>
       </div>
