--- a/axelor-web/src/main/webapp/css/view.portal.css
+++ b/axelor-web/src/main/webapp/css/view.portal.css
@@ -99,6 +99,11 @@
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
+	
+	border: 1px solid #d4d4d4;
+	border-top: none;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
 }
 
 .portlet .portlet-content > div,
@@ -108,6 +113,8 @@
 	-webkit-box-sizing: border-box;
 	   -moz-box-sizing: border-box;
 	        box-sizing: border-box;
+	        
+	border: none;
 }
 
 .portlet .portlet-content > .nvtooltip {
@@ -134,9 +141,4 @@
 
 .portal-view .ui-sortable-placeholder * {
 	visibility: hidden;
-}
-
-.portlet-content > .chart-container {
-	border: 1px solid #DDD;
-	border-top: 0;
 }
