--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -404,6 +404,11 @@ header .navbar-inverse .dropdown-submenu:focus > a {
 	margin-right: 100px;
 }
 
+.navigation-tabs > .nav-tabs-wrap li.dirty a:before {
+	content: '*';
+	margin-right: 2px;
+}
+
 .navigation-tabs > .axelor-logo {
 	border-bottom: 1px solid #ddd;
 }
