--- a/axelor-web/src/main/webapp/partials/nav-tabs.html
+++ b/axelor-web/src/main/webapp/partials/nav-tabs.html
@@ -4,9 +4,9 @@
 	<div class="nav-tabs-scroll-r"><a href="#"><i class="icon-chevron-right"></i></a></div>
 	<div class="nav-tabs-strip">
 	<ul class="nav nav-tabs nav-tabs-main nav-tabs-scrollable nav-tabs-closable">
-	 <li ng-repeat="tab in navTabs" ng-class="{ active: tab.selected, inactive: !tab.selected }">
+	 <li ng-repeat="tab in navTabs" ng-class="{ active: tab.selected, inactive: !tab.selected, dirty: tabDirty(tab) }">
 	   <a href="" ng-click="navClick(tab)">
-	     <img class="prefix-icon" ng-show="tab.icon" ng-src="{{tab.icon}}"><span>{{tab.title}}</span>
+	     <img class="prefix-icon" ng-show="tab.icon" ng-src="{{tab.icon}}"><span>{{tabTitle(tab)}}</span>
 	   </a>
 	   <i ng-show="canCloseTab(tab)" class="icon-remove" ng-click="closeTab(tab)"></i>
 	 </li>
