--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -182,6 +182,18 @@ table.form-layout td.form-item.v-align-top {
 	margin-top: 6px !important;
 }
 
+.form-item-container label.checkbox {
+	padding-right: 6px;
+}
+
+.form-item-container.readonly label.checkbox {
+	cursor: default;
+}
+
+.form-item-container label.checkbox input[type="checkbox"] {
+	margin-top: 4px !important;
+}
+
 .form-item-container button {
 	padding: 2px 10px 2px;
 	min-width: 26px;
