--- a/axelor-auth/src/main/resources/views/Permission.xml
+++ b/axelor-auth/src/main/resources/views/Permission.xml
@@ -15,32 +15,36 @@
   </grid>
 
   <form title="Permission" name="permission-form" cols="2" colWidths="*,175">
-    <group title="General" cols="2">
+    <group title="General" cols="2" colWidths="100,*">
         <field name="name"/>
         <field name="object"/>
     </group>
-    <group title="Access" colWidths="*,25,*,25">
-        <field name="canRead"/>
-        <field name="canWrite"/>
-        <field name="canCreate"/>
-        <field name="canRemove"/>
-        <field name="canExport"/>
+    <group title="Access" cols="3">
+        <field name="canRead" widget="inline-checkbox"/>
+        <field name="canWrite" widget="inline-checkbox"/>
+        <field name="canCreate" widget="inline-checkbox"/>
+        <field name="canRemove" widget="inline-checkbox"/>
+        <field name="canExport" widget="inline-checkbox"/>
     </group>
-    <group title="Read" cols="2" colSpan="2" showIf="canRead">
+    <group title="Read" colSpan="2" cols="2" colWidths="100,*" showIf="canRead">
         <field name="readCondition" title="Condition"/>
         <field name="readParams" title="Params"/>
     </group>
-    <group title="Write" cols="2" colSpan="2" showIf="canWrite">
+    <group title="Write" colSpan="2" cols="2" colWidths="100,*" showIf="canWrite">
         <field name="writeCondition" title="Condition"/>
         <field name="writeParams" title="Params"/>
     </group>
-    <group title="Create" cols="2" colSpan="2" showIf="canCreate">
+    <group title="Create" colSpan="2" cols="2" colWidths="100,*" showIf="canCreate">
         <field name="createCondition" title="Condition"/>
         <field name="createParams" title="Params"/>
     </group>
-    <group title="Export" cols="2" colSpan="2" showIf="canExport">
+    <group title="Remove" colSpan="2" cols="2" colWidths="100,*" showIf="canRemove">
+        <field name="removeCondition" title="Condition"/>
+        <field name="removeParams" title="Params"/>
+    </group>
+    <group title="Export" colSpan="2" cols="2" colWidths="100,*" showIf="canExport">
         <field name="exportCondition" title="Condition"/>
-        <field name="exportParams" title="Params"/>
+        <field name="expoParams" title="Params"/>
     </group>
   </form>
 
