Implemented hotkeys (RM-253)

--- a/axelor-web/src/main/webapp/partials/nav-tabs.html
+++ b/axelor-web/src/main/webapp/partials/nav-tabs.html
@@ -1,4 +1,4 @@
-<div class="navigation-tabs">
+<div class="navigation-tabs" ui-hot-keys>
   <div class="nav-tabs-wrap">
 	<div class="nav-tabs-scroll-l"><a href="#"><i class="icon-chevron-left"></i></a></div>
 	<div class="nav-tabs-scroll-r"><a href="#"><i class="icon-chevron-right"></i></a></div>
