--- a/axelor-auth/src/main/resources/views/User.xml
+++ b/axelor-auth/src/main/resources/views/User.xml
@@ -8,25 +8,27 @@
         <field name="group"/>
     </grid>
     
-    <form name="user-form" title="User" cols="2" colWidths="50%,50%">
-        <group title="General Info" cols="2">
-            <field name="name" validIf="name.length &gt;= 2" onChange="action-user-validData"/>
-            <field name="group"/>
+    <form name="user-form" title="User" cols="1" onSave="com.axelor.auth.AuthService:validate">
+        <group title="General Info">
+            <field name="name" placeholder="user name" validIf="name.length &gt;= 2" onChange="action-user-validData"/>
+            <field name="group" placeholder="user group"/>
+            <field name="code" placeholder="login name" validIf="code.length &gt;= 2" onChange="action-user-validData"/>
+            <field name="change" widget="inline-checkbox" title="Change password?" showIf="id"/>
+            <break/>
+            <field name="newPassword" title="Password" placeholder="new password" widget="password" showIf="change || !id"
+              requiredIf="!id" validIf="(!change &amp;&amp; id) || (newPassword.length &gt;= 4 &amp;&amp; confirm == newPassword)"/>
+            <field name="confirm" showTitle="false" placeholder="confirm password" widget="password" colSpan="2" showIf="change || !id"/>
         </group>
-        <group title="Login" cols="2">
-            <field name="code" validIf="code.length &gt;= 2" onChange="action-user-validData"/>
-            <field name="password" widget="password" validIf="password.length &gt;= 4" onChange="action-user-validData"/>
-        </group>
-        <group title="Authorization" cols="6" colSpan="2">
+        <group title="Authorization">
             <field name="blocked"/>
+            <break/>
             <field name="activeFrom" validIf="!activeFrom || (activeFrom &amp;&amp; !activeTo) || (activeFrom &amp;&amp; activeTo &amp;&amp; $moment(activeTo) &gt;= $moment(activeFrom))"/>
         	<field name="activeTo" validIf="!activeTo || (!activeFrom &amp;&amp; activeTo) || (activeFrom &amp;&amp; activeTo &amp;&amp; $moment(activeTo) &gt;= $moment(activeFrom))"/>
         </group>
-        <field name="roles" colSpan="2" grid-view="role-grid" form-view="role-form" showTitle="false" />
+        <field name="roles" grid-view="role-grid" form-view="role-form" showTitle="false" />
     </form>
     
     <action-condition name="action-user-validData">
-        <check error="Password length should be greater than 4." field="password" if="password?.length() &lt; 4"/>
         <check error="Code length should be greater than 2." field="code" if="code?.length() &lt; 2"/>
         <check error="Name length should be greater than 2." field="name" if="name?.length() &lt; 2"/>
     </action-condition>
