--- a/axelor-auth/src/main/resources/views/Role.xml
+++ b/axelor-auth/src/main/resources/views/Role.xml
@@ -10,15 +10,15 @@
     <form name="role-form" title="Role" cols="4" model="com.axelor.auth.db.Role">
         <field name="name" colSpan="2"/>
         <break/>
-		<field name="groups" colSpan="2" showTitle="false">
+		<field name="groups" colSpan="2">
           <grid title="Groups">
-            <field name="name" />
-            <field name="code" />
+            <field name="name"/>
+            <field name="code"/>
           </grid>
         </field>
-        <field name="users" colSpan="2" showTitle="false" />
+        <field name="users" colSpan="2"/>
         <separator title="Description" colSpan="4"/>
-        <field name="description" showTitle="false" colSpan="4" widget="Html"/>
+        <field name="description" colSpan="4" widget="Html[lite=true]" showTitle="false"/>
     </form>
     
 </object-views>
