remove outline from nav-select

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -621,6 +621,7 @@ table.field-details .help-text hr {
 	position: relative;
 	display: block;
 	float: left;
+	outline: none;
 }
 
 .nav-select li a:after,
