Fixed toolbar issue (#1651)

--- a/axelor-web/src/main/webapp/partials/views/grid.html
+++ b/axelor-web/src/main/webapp/partials/views/grid.html
@@ -18,7 +18,7 @@
         </div>
         <div ui-filter-box x-handler="this"></div>
         <div class="btn-group" ng-if="toolbar" ui-btn-group-helper>
-          <button ng-repeat="btn in toolbar" class="btn" ui-tool-button="btn">{{btn.title}}</button>
+          <button ng-repeat="btn in toolbar | filter:{custom: true}" class="btn" ui-tool-button="btn">{{btn.title}}</button>
         </div>
         <div ui-menu-bar menus="menubar" handler="this"></div>
         <div ui-view-switcher class="pull-right"></div>
