improved button widget

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -866,6 +866,11 @@ table.field-details .help-text hr {
 	text-decoration: none;
 }
 
+.button-item.disabled {
+	outline: none;
+	opacity: 0.55;
+}
+
 .record-toolbar .button-item {
 	line-height: 20px;
 }
