save attachment on file system (#1574)

--- a/axelor-meta/src/main/resources/views/Views.xml
+++ b/axelor-meta/src/main/resources/views/Views.xml
@@ -314,16 +314,16 @@
   <grid title="Files" name="meta-files-grid" model="com.axelor.meta.db.MetaFile">
     <field name="fileName"/>
     <field name="sizeText" width="150"/>
-    <field name="mine" width="250"/>
+    <field name="mime" width="250"/>
     <field name="createdBy"/>
     <field name="createdOn" width="150"/>
   </grid>
 
   <form title="Files" name="meta-files-form" model="com.axelor.meta.db.MetaFile">
-    <field name="content"/>
+    <field name="content" type="binary"/>
     <field name="fileName"/>
     <field name="size"/>
-    <field name="mine"/>
+    <field name="mime"/>
     <field name="description"/>
   </form>
 
