--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -29,7 +29,7 @@
         </div>
         <div class="btn-group" ui-btn-group-helper>
           <button class="btn" ng-show="hasAuditLog()" ng-click="onShowLog($event)"><i class="icon icon-eye-open"></i></button>
-          <button class="btn" ng-show="canShowAttachments()" ng-click="onShowAttachments()"><i class="icon icon-pushpin"></i></button>
+          <button class="btn" ng-show="canShowAttachments()" ng-click="onShowAttachments()"><i class="icon icon-pushpin"></i><sub ng-if="record.$attachments"> {{record.$attachments}}</sub></button>
           <button class="btn" ng-show="hasHelp()" ng-click="onShowHelp()"><i class="icon icon-info-sign"></i></button>
         </div>
         <div class="btn-group" ng-if="toolbar" ui-btn-group-helper>
