Implemented watch checker for tabs and forms
- the tab watch checker prevents $watch on inactive tabs
- the form watch checker prevents $watch on hidden forms

--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -1,4 +1,4 @@
-<div class="form-view" ng-controller="FormViewCtrl">
+<div class="form-view" ng-controller="FormViewCtrl" ui-tab-gate>
   <div class="navbar record-toolbar" ng-show="canShowToolbar()">
     <div class="navbar-inner">
       <div class="container">
