--- a/axelor-web/src/main/webapp/partials/views/grid.html
+++ b/axelor-web/src/main/webapp/partials/views/grid.html
@@ -1,4 +1,4 @@
-<div class="grid-view" ng-controller="GridViewCtrl">
+<div class="grid-view" ng-controller="GridViewCtrl" ui-tab-gate>
   <div class="navbar record-toolbar">
     <div class="navbar-inner">
       <div class="container">
