--- a/axelor-meta/src/main/resources/views/MetaUser.xml
+++ b/axelor-meta/src/main/resources/views/MetaUser.xml
@@ -19,7 +19,7 @@
       <field name="user" readonly="true" />
       <field name="email" widget="Email" />
       <field name="language" />
-      <field name="action" domain="self.type = 'action-view'" widget="SuggestBox"/>
+      <field name="action" domain="self.type = 'action-view'" widget="SuggestBox" canNew="false"/>
   </form>
   
   <menuitem name="menu-user-preferences" parent="menu-auth" title="Preferences"
