--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -63,6 +63,10 @@
 	overflow: auto;
 }
 
+.view-container .form-view .nested-editor form {
+	width: inherit !important;
+}
+
 .ui-dialog-content > div[ui-view-form] {
 	min-width: 320px;
 }
