Fixed logo issue on IE 10 (RM-1637)

--- a/axelor-web/src/main/webapp/partials/nav-tabs.html
+++ b/axelor-web/src/main/webapp/partials/nav-tabs.html
@@ -17,8 +17,8 @@
     <div ng-show="tab.selected" ng-repeat="tab in navTabs" ui-view-pane="tab"></div>
   </div>
   <a href="http://axelor.com" tabindex="-1" target="_blank" class="axelor-logo"
-    style="position: absolute; position: absolute; right: 0px; top: 0px;">
-    <img src="img/axelor.png" width="100" height="32">
+    style="position: absolute; right: 0px; top: 3px;">
+    <img src="img/axelor.png" style="width: 100px; height: 32px">
   </a>
   <div id="nav-tabs-menu" class="dropdown clearfix">
     <ul class="dropdown-menu" style="display:block;position:static;margin-bottom:5px;">
