Added support to restore single view (#1602)

--- a/axelor-meta/src/main/resources/views/Views.xml
+++ b/axelor-meta/src/main/resources/views/Views.xml
@@ -99,9 +99,8 @@
     </group>
     <group title="Actions" cols="1">
         <button name="validate" title="Validate" onClick="action-view-validate"/>
-        <button name="restore" title="Restore" onClick="action-meta-todo"/>
-        <button name="restoreAll" title="Restore All" prompt="All the customizations will be lost. Are you sure?" onClick="action-meta-restore-all"/>
-        <button name="preview" title="Preview" onClick="action-meta-todo"/>
+        <button name="restore" title="Restore" prompt="All the customizations made for this view will be lost. Are you sure ?" onClick="save,action-meta-restore-single"/>
+        <button name="restoreAll" title="Restore All" prompt="All the customizations will be lost. Are you sure ?" onClick="action-meta-restore-all"/>
     </group>
     <field name="xml" showTitle="false" colSpan="2" widget="CodeEditor[syntax=xml|height=500]"/>
 </form>
@@ -211,6 +210,10 @@
 
   <action-method name="action-meta-restore-all">
     <call class="com.axelor.meta.web.MetaController" method="restoreAll"/>
+  </action-method>
+  
+  <action-method name="action-meta-restore-single">
+    <call class="com.axelor.meta.web.MetaController" method="restoreSingle"/>
   </action-method>
 
   <action-validate name="action-meta-todo">
