Fixed grid widget header issue when not initialized.

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -58,6 +58,12 @@
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
 
+.slickgrid-empty .slick-header,
+.slickgrid-empty .slick-headerrow {
+	height: 0;
+	border-bottom: none;
+}
+
 .slickgrid .slick-cell,
 .slickgrid .slick-header-column {
 	-webkit-box-sizing: content-box;
